# aoc

./: Cargo.toml
benches/: aoc2024.rs  aoc2024_01.rs  aoc2024_02.rs  aoc2024_03.rs  aoc2024_04.rs  aoc2024_05.rs
src/: lib.rs
src/aoc2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
